@@ -1,5 +1,9 @@
 ChangeLog for the Astro project.
 
+20190729:
+	* add LD_LIBRARY_PATH so that snowstar is able to find libraries
+	  (seems to be necessary for Ice-3.7.3, the current git version)
+
 20190728:
 	* add findLike to BSC
 	* add star catalogs to catalogdialog
